fixed display on mobile

--- a/css/calculator.css
+++ b/css/calculator.css
@@ -20,8 +20,8 @@ h1 {
 }
 
 button {
-	width: 80px; 
-	height: 80px;
+	width: 79px; 
+	height: 79px;
 	background-color: black;
 	color: white;
 	font-family: 'VT323', monospace;
